--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "express": "~4.12.2",
     "jade": "~1.9.2",
     "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0"
+    "serve-favicon": "~2.2.0",
+    "node-cache":"1.1.0",
+    "mocha" : "2.2.1",
+    "chai" : "2.1.2"
   }
 }
