--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "serve-favicon": "~2.2.0",
     "node-cache":"1.1.0",
     "mocha" : "2.2.1",
-    "chai" : "2.1.2"
+    "chai" : "2.1.2",
+    "yeast" : "0.0.0"
   }
 }
