--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-cache":"1.1.0",
     "mocha" : "2.2.1",
     "chai" : "2.1.2",
-    "yeast" : "0.0.0"
+    "yeast" : "0.0.0",
+    "geo-tools" : "0.1.2"
   }
 }
